--- a/_collections/_raw-footage/2020-07-15_a-video.md
+++ b/_collections/_raw-footage/2020-07-15_a-video.md
@@ -1,10 +1,8 @@
 ---
 layout: post
-title:  Video placeholder
-description: This is a video placeholder
+title:  Raw footage example 1
+description: This is a an interesting raw tape
 date:   1976-08-12
 image: https://upload.wikimedia.org/wikipedia/commons/5/51/Mandarin.duck.arp.jpg
-
-description: Another placeholder
 ---
 Here is where a video will go. The embedded link to the IA streaming file should be here.
