some copy edits; add pdf viewer for shot logs of raw footage

--- a/_collections/_raw-footage/2020-07-27_video-2.md
+++ b/_collections/_raw-footage/2020-07-27_video-2.md
@@ -3,6 +3,7 @@ layout: post
 title:  Sample Raw Footage 2
 description: This is another interesting raw tape
 date:   1976-08-12
+archiveID: cbpf_000048
 image: https://upload.wikimedia.org/wikipedia/commons/5/51/Mandarin.duck.arp.jpg
 ---
 Here is where a video will go. The embedded link to the IA streaming file should be here.
@@ -18,7 +19,7 @@ Here is where a video will go. The embedded link to the IA streaming file should
 
   <div class="row">
     <div class="col">
-      <p>Some other text</p>
+      {% include internetArchive.html id=page.archiveID %}
     </div>
   </div>
 </div>
