add archive.org embedded player
add archive.org embedded player

--- a/_collections/_raw-footage/2020-07-27_video-2.md
+++ b/_collections/_raw-footage/2020-07-27_video-2.md
@@ -8,18 +8,18 @@ image: https://upload.wikimedia.org/wikipedia/commons/5/51/Mandarin.duck.arp.jpg
 ---
 Here is where a video will go. The embedded link to the IA streaming file should be here.
 <div class="container">
+  <div class="row">
+    <div class="col-sm-12 text-center">
+      {% include internetArchive.html id=page.archiveID %}
+    </div>
+  </div>
   <p>Here's a sample shot log of the tape in question:</p>
 
   <div class="row">
     <div class="col-sm-12 text-center">
-    <object height="1000" style="width: 70%" data="{{ site.baseurl }}/assets/pdfs/log-sample.pdf" type='application/pdf'></object>
+      <object height="1000" style="width: 70%" data="{{ site.baseurl }}/assets/pdfs/log-sample.pdf" type='application/pdf'></object>
     <!-- <object style="width: 70%; height: 100%" data="{{ site.baseurl }}/assets/pdfs/log-sample.pdf" type='application/pdf'></object> -->
     </div>
   </div>
 
-  <div class="row">
-    <div class="col">
-      {% include internetArchive.html id=page.archiveID %}
-    </div>
-  </div>
 </div>
