try to fix the post "excerpt" thinking it should include embedded video

--- a/_collections/_raw-footage/2020-07-27_video-2.md
+++ b/_collections/_raw-footage/2020-07-27_video-2.md
@@ -7,6 +7,9 @@ archiveID: cbpf_000048
 image: https://upload.wikimedia.org/wikipedia/commons/5/51/Mandarin.duck.arp.jpg
 ---
 Here is where a video will go. The embedded link to the IA streaming file should be here.
+
+There needs to be more text here, like a paragraph or two.
+
 <div class="container">
   <div class="row">
     <div class="col-sm-12 text-center">
