couple minor adjustments

--- a/_collections/_paper-archives/2020-07-27_papers-2.md
+++ b/_collections/_paper-archives/2020-07-27_papers-2.md
@@ -8,3 +8,5 @@ description: This is another neat thing from the paper collection.
 ---
 
 Here is one more neat thing from the paper collection.
+
+<!-- <div class='uv' data-locale='en-GB:English (GB),en-GB:English (GB)' data-config='/api/v1/universalviewer_config?download=1' data-uri='/nanna/iiif/91829/manifest' data-collectionindex='0' data-manifestindex='0' data-sequenceindex='0' data-canvasindex='0' data-xywh='-529,-227,5994,4522' data-rotation='0' style='width:560px; height:420px; background-color: #000'></div><script type='text/javascript' id='embedUV' src='https://digicoll.lib.berkeley.edu/js/uv-2.0.2/lib/embed.js'></script> -->
