--- a/_collections/_paper-archives/2020-07-15_papers-1.md
+++ b/_collections/_paper-archives/2020-07-15_papers-1.md
@@ -1,10 +1,14 @@
 ---
 layout: post
-title:  Papers example no. 1
-date:   1976-08-12
-image: https://upload.wikimedia.org/wikipedia/commons/5/51/Mandarin.duck.arp.jpg
+title:  Scrapbook for The World's Largest TV Studio
+date:   1972-08-12
+image: /assets/images/wltvs-cover.jpg
 
-description: This is something neat from the paper collection.
+description: This is a scrapbook made by TVTV during the 1972 democratic national convention.
 ---
 
-This will demonstrate something neat about the paper collection.
+TVTV made this scrapbook during their production of The World's Largest TV Studio, their documentary about the 1972 Democratic National Convention (and the mainstream media's coverage of the convention). This was their first production as a collective and groundbreaking documentary yadda yadda.
+
+Talk about their time in Miami, how it was fun and totally serious and organized too.
+
+[Link to UCB Library digital collection site.]
