--- a/_collections/_raw-footage/2020-07-15_gfa-076.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-076.md
@@ -10,20 +10,23 @@ This tape consists of approximately 33 minutes of raw footage from the TVTV shoo
 
 TVTV taped a press conference featuring Ralph Nader on the the difficult economy, inflation, and wealth disparities of 1974. Also included is an interview with Nader about Gerald Ford's economic policies and government plans to aid industry at the expense of working people.
 
-*"In one area after another this administration and its predecessor is espousing or promoting or administering policies that promote inflation and promote the inequitable distribution of the fuits of our economy."*
+*"In one area after another this administration and its predecessor is espousing or promoting or administering policies that promote inflation and promote the inequitable distribution of the fruits of our economy."*
 
-<div class="container">
+<div class="iframe-container">
+  {% include internetArchive.html id=page.archiveID %}
+</div>
+
+---
+
+<div class="container-fluid">
   <div class="row">
-    <div class="col-sm-12 text-center">
-      {% include internetArchive.html id=page.archiveID %}
+    <div class="col">
+      <p>Here is the original TVTV tape log prepared for editing GERALD FORD'S AMERICA:</p>
     </div>
   </div>
-  <p>Here's a sample shot log of the tape in question:</p>
-
   <div class="row">
-    <div class="col-sm-12 text-center">
-      <object height="1000" style="width: 70%" data="{{ site.baseurl }}/assets/pdfs/gfa-076-log.pdf" type='application/pdf'></object>
-    <!-- <object style="width: 70%; height: 100%" data="{{ site.baseurl }}/assets/pdfs/log-sample.pdf" type='application/pdf'></object> -->
+    <div class="col text-center pdf-holder">
+      <object data="{{ site.baseurl }}/assets/pdfs/gfa-076-log.pdf" type='application/pdf'></object>
     </div>
   </div>
 
