--- a/_collections/_raw-footage/2020-07-15_gfa-245.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-245.md
@@ -1,29 +1,32 @@
 ---
 layout: post
 title:  Gerald Ford's America 245. Trip number 6. Portland--flesh/demos. McCall
-description: A press conference and interview with Ralph Nader
-date:   1974-09-27
+description: TVTV on the ground with Gerald Ford, the media, and protestors
+date:   1974-11-01
 archiveID: gerald-fords-america-245_17457_PM0017310_R01of01
 image: /assets/images/nader.jpg
 ---
+
 This tape consists of approximately 33 minutes of raw footage from the TVTV shooting of GERALD FORD'S AMERICA.
 
-TVTV visted Portland Oregon
+TVTV visited Portland, Oregon, as Gerald Ford arrived with a media entourage for a high-dollar fundraiser, where TVTV interviewed befurred and bejewelled gala attendees. The new president was also greeted by a series of protests with chants of "FEED THE POOR! EAT THE RICH!" Included is a conversation at the gala with Oregon governor Tom McCall.
 
-*"In one area after another this administration and its predecessor is espousing or promoting or administering policies that promote inflation and promote the inequitable distribution of the fuits of our economy."*
+<div class="iframe-container">
+  {% include internetArchive.html id=page.archiveID %}
+</div>
+
+---
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-12 text-center">
-      {% include internetArchive.html id=page.archiveID %}
+    <div class="col">
+      <p>Below is the original TVTV tape log prepared for editing GERALD FORD'S AMERICA. For the Presidential Diary account of the day, see <a href="For the Presidential Diary account of the day, see here">here</a>.</p>
     </div>
   </div>
-  <p>Here's a sample shot log of the tape in question:</p>
 
   <div class="row">
-    <div class="col-sm-12 text-center">
-      <object height="1000" style="width: 70%" data="{{ site.baseurl }}/assets/pdfs/gfa-076-log.pdf" type='application/pdf'></object>
-    <!-- <object style="width: 70%; height: 100%" data="{{ site.baseurl }}/assets/pdfs/log-sample.pdf" type='application/pdf'></object> -->
+    <div class="col text-center pdf-holder">
+      <object data="{{ site.baseurl }}/assets/pdfs/gfa-245-log.pdf" type='application/pdf'></object>
     </div>
   </div>
 
