add more raw footage content

--- a/_collections/_raw-footage/2020-07-15_gfa-245.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-245.md
@@ -4,7 +4,7 @@ title:  Gerald Ford's America 245. Trip number 6. Portland--flesh/demos. McCall
 description: TVTV on the ground with Gerald Ford, the media, and protestors
 date:   1974-11-01
 archiveID: gerald-fords-america-245_17457_PM0017310_R01of01
-image: /assets/images/nader.jpg
+image: /assets/images/ford-protest.jpg
 ---
 
 This tape consists of approximately 33 minutes of raw footage from the TVTV shooting of GERALD FORD'S AMERICA.
