add jasons copy; some minor style tweaks

--- a/_collections/_raw-footage/2020-07-15_gfa-001.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-001.md
@@ -9,7 +9,7 @@ image: /assets/images/wh-fence.jpg
 
 This tape consists of approximately 25 minutes of raw footage from the TVTV shooting of GERALD FORD'S AMERICA.
 
-TVTV had initially planned to make a show about Richard Nixon's impeachment, but with the president's resignation, the production turned into GERALD FORD'S AMERICA, following Ford's presidency closely for 100 days. This tape is the very first from the shoot, as TVTV members arrive in Washington on the day  Nixon announced his resignation. Elon Soltes and Skip Blumberg tape the scene in front of the White House, from protests to prayer singers to bemused onlookers.
+TVTV had initially planned to make a show about Richard Nixon's impeachment, but the president resigned just as the collective was gearing up for production, less than a year after vice president Spiro Agnew's resignation. The show turned into GERALD FORD'S AMERICA as TVTV followed the accidental president's first 100 days in office. This tape is the very first from the shoot, as TVTV members arrive in Washington on the day  Nixon announced his resignation. Elon Soltes and Skip Blumberg tape the scene in front of the White House, from protests to prayer singers to bemused onlookers.
 
 *"I think it's better to have an honest dummy in the White House than a crook, don't you?"*
 
