test fix PDF and archive.org iframes on mobile

--- a/_collections/_raw-footage/2020-07-15_gfa-245.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-245.md
@@ -25,9 +25,7 @@ TVTV visited Portland, Oregon, as Gerald Ford arrived with a media entourage for
   </div>
 
   <div class="row">
-    <div class="col text-center pdf-holder">
-      <object data="{{ site.baseurl }}/assets/pdfs/gfa-245-log.pdf" type='application/pdf'></object>
-    </div>
+    {{ include pdf_viewer.html data="{{ site.baseurl }}/assets/pdfs/gfa-245-log.pdf" }}
   </div>
 
 </div>
