fix PDF include error

--- a/_collections/_raw-footage/2020-07-15_gfa-245.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-245.md
@@ -25,7 +25,7 @@ TVTV visited Portland, Oregon, as Gerald Ford arrived with a media entourage for
   </div>
 
   <div class="row">
-    {{ include pdf_viewer.html data="{{ site.baseurl }}/assets/pdfs/gfa-245-log.pdf" }}
+    {{ include pdf_viewer.html data="/assets/pdfs/gfa-245-log.pdf" }}
   </div>
 
 </div>
