try archive.org embed directly

--- a/_collections/_raw-footage/2020-07-15_gfa-245.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-245.md
@@ -11,9 +11,10 @@ This tape consists of approximately 33 minutes of raw footage from the TVTV shoo
 
 TVTV visited Portland, Oregon, as Gerald Ford arrived with a media entourage for a high-dollar fundraiser, where TVTV interviewed befurred and bejewelled gala attendees. The new president was also greeted by a series of protests with chants of "FEED THE POOR! EAT THE RICH!" Included is a conversation at the gala with Oregon governor Tom McCall.
 
-<div class="iframe-container">
-  {% include internetArchive.html id=page.archiveID %}
-</div>
+<!-- <div class="iframe-container mx-auto"> -->
+  <iframe src="https://archive.org/embed/gerald-fords-america-245_17457_PM0017310_R01of01" width="640" height="480" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+  <!-- {% include internetArchive.html id=page.archiveID %} -->
+<!-- </div> -->
 
 ---
 
