add more raw footage content

--- a/_collections/_raw-footage/2020-07-15_gfa-001.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-001.md
@@ -22,14 +22,12 @@ TVTV had initially planned to make a show about Richard Nixon's impeachment, but
 <div class="container">
   <div class="row">
     <div class="col">
-      <p>Below is the original TVTV tape log prepared for editing GERALD FORD'S AMERICA. For the Presidential Diary account of the day, see <a href="For the Presidential Diary account of the day, see here">here</a>.</p>
+      <p>Below is the original TVTV tape log prepared for editing GERALD FORD'S AMERICA.</p>
     </div>
   </div>
 
   <div class="row">
-    <div class="col text-center pdf-holder">
-      <object data="{{ site.baseurl }}/assets/pdfs/gfa-245-log.pdf" type='application/pdf'></object>
-    </div>
+    {% include pdf_viewer.html pdf="/assets/pdfs/gfa-001-log.pdf" %}
   </div>
 
 </div>
