--- a/_collections/_raw-footage/2020-07-15_gfa-245.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-245.md
@@ -11,7 +11,7 @@ This tape consists of approximately 33 minutes of raw footage from the TVTV shoo
 
 TVTV visited Portland, Oregon, as Gerald Ford arrived with a media entourage for a high-dollar fundraiser, where TVTV interviewed befurred and bejewelled gala attendees. The new president was also greeted by a series of protests with chants of "FEED THE POOR! EAT THE RICH!" Included is a conversation at the gala with Oregon governor Tom McCall.
 
-<div class="iframe-container-4-3">
+<div class="iframe-container-4-3 mx-auto" style="width: 80%">
   {% include internetArchive.html id=page.archiveID %}
 </div>
 
