test embed fix again

--- a/_collections/_raw-footage/2020-07-15_gfa-076.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-076.md
@@ -15,6 +15,7 @@ TVTV taped a press conference featuring Ralph Nader on the the difficult economy
 <div class="iframe-container">
   {% include internetArchive.html id=page.archiveID %}
 </div>
+<iframe src="https://archive.org/embed/gerald-fords-america-076_17306_PM0017236_R01of01" width="640" height="480" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
 
 ---
 
