test embed fix again again again

--- a/_collections/_raw-footage/2020-07-15_gfa-076.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-076.md
@@ -3,7 +3,8 @@ layout: post
 title:  Gerald Ford's America 076. 9/27 [Ralph] Nader press conference on economic summit
 description: A press conference and interview with Ralph Nader
 date:   1974-09-27
-archiveID: /gerald-fords-america-076_17306_PM0017236_R01of01
+#archiveID: /gerald-fords-america-076_17306_PM0017236_R01of01
+archiveID: cbpf_000048
 image: /assets/images/nader.jpg
 ---
 This tape consists of approximately 33 minutes of raw footage from the TVTV shooting of GERALD FORD'S AMERICA.
@@ -15,77 +16,7 @@ TVTV taped a press conference featuring Ralph Nader on the the difficult economy
 <div class="iframe-container">
   {% include internetArchive.html id=page.archiveID %}
 </div>
-<iframe src="https://archive.org/embed/gerald-fords-america-076_17306_PM0017236_R01of01" width="640" height="480" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen><html lang="en">
-<!-- __ _ _ _ __| |_ (_)__ _____
-    / _` | '_/ _| ' \| |\ V / -_)
-    \__,_|_| \__|_||_|_| \_/\___| -->
-  <head>
-    <title>Gerald Ford's America 076. 9/27 [Ralph] Nader press conference re: economic summit : TVTV (Top Value Television) : Free Borrow &amp; Streaming : Internet Archive</title>
 
-          <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-        <meta name="google-site-verification" content="Q2YSouphkkgHkFNP7FgAkc4TmBs1Gmag3uGNndb53B8" />
-    <meta name="google-site-verification" content="bpjKvUvsX0lxfmjg19TLblckWkDpnptZEYsBntApxUk" />
-
-        <script>window.archive_setup=[]</script>
-    <meta charset="UTF-8">
-    <script src="//archive.org/includes/jquery-1.10.2.min.js?v1.10.2" type="text/javascript"></script>
-            <script src="//archive.org/includes/analytics.js?v=293ec9b3" type="text/javascript"></script>
-    <script>
-      'use strict';
-      if ('archive_analytics' in window) {
-                  archive_analytics.service = "ao_2";
-
-        archive_analytics.send_pageview_on_load({"mediaType":"movies","primaryCollection":"stream_only"});
-
-        archive_analytics.process_url_events(window.location);
-      }
-    </script>
-        <script src="//archive.org/includes/build/npm/jquery-ui.min.js?v1.12.1" type="text/javascript"></script>
-    <script src="//archive.org/includes/bootstrap.min.js?v3.0.0" type="text/javascript"></script>
-    <script src="//archive.org/components/npm/clipboard/dist/clipboard.js?v=293ec9b3" type="text/javascript"></script>
-    <script src="//archive.org/components/npm/@babel/polyfill/dist/polyfill.min.js?v=293ec9b3" type="text/javascript"></script>
-    <script src="//archive.org/includes/build/js/ie-dom-node-remove-polyfill.min.js?v=293ec9b3" type="text/javascript"></script>
-    <script src="//archive.org/includes/build/js/polyfill.min.js?v=293ec9b3" type="text/javascript"></script>
-    <script src="//archive.org/components/npm/@webcomponents/webcomponentsjs/webcomponents-bundle.js?v=293ec9b3" type="text/javascript"></script>
-    <script src="//archive.org/includes/build/js/more-facets.min.js?v=293ec9b3" type="text/javascript"></script>
-    <script src="//archive.org/includes/build/js/radio-player-controller.min.js?v=293ec9b3" type="text/javascript"></script>
-    <script src="//archive.org/includes/build/js/ia-wayback-search.min.js?v=293ec9b3" type="text/javascript"></script>
-    <script src="//archive.org/includes/build/js/ia-topnav.min.js?v=293ec9b3" type="text/javascript"></script>
-    <script src="//archive.org/includes/build/npm/react/umd/react.production.min.js?v16.7.0" type="text/javascript"></script>
-    <script src="//archive.org/includes/build/npm/react-dom/umd/react-dom.production.min.js?v16.7.0" type="text/javascript"></script>
-    <script src="//archive.org/includes/build/js/play8.min.js?v=293ec9b3" type="text/javascript"></script>
-    <script src="//archive.org/includes/build/js/playset.min.js?v=293ec9b3" type="text/javascript"></script>
-    <script src="//archive.org/includes/build/js/areact.min.js?v=293ec9b3" type="text/javascript"></script>
-<meta name="description" content="Nader statement begins 00:11:05. TVTV interview with Nader begins 00:20:22. --mg, 6/11/2019"/>
-                      <meta property="og:title" content="Gerald Ford's America 076. 9/27 [Ralph] Nader press conference re: economic summit : TVTV (Top Value Television) : Free Borrow &amp; Streaming : Internet Archive">
-                      <meta property="og:description" content="Nader statement begins 00:11:05. TVTV interview with Nader begins 00:20:22. --mg, 6/11/2019">
-                      <meta property="og:site_name" content="Internet Archive">
-                      <meta property="og:image" content="https://archive.org/services/img/gerald-fords-america-076_17306_PM0017236_R01of01">
-                      <meta property="og:url" content="https://archive.org/details/gerald-fords-america-076_17306_PM0017236_R01of01">
-        <meta property="twitter:card" content="summary_large_image"/>
-<meta property="twitter:site" content="@internetarchive"/>
-<meta property="twitter:account_id" content="18957805"/>
-<meta property="twitter:description" content="Nader statement begins 00:11:05. TVTV interview with Nader begins 00:20:22. --mg, 6/11/2019"/>
-<meta property="twitter:title" content="Gerald Ford's America 076. 9/27 [Ralph] Nader press conference re: economic summit : TVTV (Top Value Television) : Free Borrow &amp; Streaming : Internet Archive"/>
-<meta property="twitter:image" content="https://archive.org/download/gerald-fords-america-076_17306_PM0017236_R01of01/792_alt_2118_43677b755ed117d.JPG"/>
-<link rel="canonical" href="https://archive.org/details/gerald-fords-america-076_17306_PM0017236_R01of01">
-    <script type="application/ld+json">
-      {"@context":"http:\/\/schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"item":{"@id":"https:\/\/archive.org\/details\/movies","name":"Videos","image":"https:\/\/archive.org\/services\/img\/movies"}}]}    </script>
-                          <meta property="braintree_token" content="production_w3jccm3z_pqd7hz44swp6zvvw">
-                      <meta property="environment" content="production">
-                      <meta property="venmo_id" content="2878003111190856236">
-            <link href="//archive.org/includes/build/css/archive.min.css?v=293ec9b3" rel="stylesheet" type="text/css"/>
-    <link rel="SHORTCUT ICON" href="https://archive.org/images/glogo.jpg"/>
-      </head>
-  <body class="navia embedded ia-module tiles">
-    <a href="#maincontent" class="hidden-for-screen-readers">Skip to main content</a>
-
-    <!-- Wraps all page content -->
-    <div id="wrap"
-              itemscope
-        itemtype="http://schema.org/VideoObject">
-          </iframe>
 
 ---
 
