unleash evil analytics bs

--- a/_collections/_raw-footage/2020-07-15_gfa-076.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-076.md
@@ -3,8 +3,7 @@ layout: post
 title:  Gerald Ford's America 076. 9/27 [Ralph] Nader press conference on economic summit
 description: A press conference and interview with Ralph Nader
 date:   1974-09-27
-#archiveID: /gerald-fords-america-076_17306_PM0017236_R01of01
-archiveID: cbpf_000048
+archiveID: /gerald-fords-america-076_17306_PM0017236_R01of01
 image: /assets/images/nader.jpg
 ---
 This tape consists of approximately 33 minutes of raw footage from the TVTV shooting of GERALD FORD'S AMERICA.
@@ -16,7 +15,6 @@ TVTV taped a press conference featuring Ralph Nader on the the difficult economy
 <div class="iframe-container">
   {% include internetArchive.html id=page.archiveID %}
 </div>
-
 
 ---
 
