add wltvs tape 25 page; minor styling changes

--- a/_collections/_raw-footage/2020-07-15_gfa-001.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-001.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  Gerald Ford’s America 001. 8/8 [1974] White House
-description: TVTV tape at the White House on the day of Richard Nixon's resignation
+description: Raw footage from GERALD FORD'S AMERICA featuring TVTV at the White House on the day of Richard Nixon's resignation
 date:   1974-08-08
 archiveID: gerald-fords-america-001_17246_PM0017482_R01of01
 image: /assets/images/wh-fence.jpg
