--- a/_collections/_raw-footage/2020-07-15_gfa-076.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-076.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  Gerald Ford's America 076. 9/27 [Ralph] Nader press conference on economic summit
-description: A press conference and interview with Ralph Nader
+description: Raw footage from GERALD FORD'S AMERICA featuring a press conference and interview with Ralph Nader
 date:   1974-09-27
 archiveID: /gerald-fords-america-076_17306_PM0017236_R01of01
 image: /assets/images/nader.jpg
