--- a/_collections/_raw-footage/2020-07-15_gfa-245.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-245.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  Gerald Ford's America 245. Trip number 6. Portland--flesh/demos. McCall
-description: TVTV on the ground with Gerald Ford, the media, and protestors
+description: Raw footage from GERALD FORD'S AMERICA featuring TVTV on the ground in Portland with Gerald Ford, the media, and protestors
 date:   1974-11-01
 archiveID: gerald-fords-america-245_17457_PM0017310_R01of01
 image: /assets/images/ford-protest.jpg
