--- a/_collections/_raw-footage/2020-07-15_gfa-001.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-001.md
@@ -13,7 +13,7 @@ TVTV had initially planned to make a show about Richard Nixon's impeachment, but
 
 *"I think it's better to have an honest dummy in the White House than a crook, don't you?"*
 
-<div class="iframe-container">
+<div class="iframe-container-4-3 mx-auto" style="width: 80%">
   {% include internetArchive.html id=page.archiveID %}
 </div>
 
