--- a/_collections/_raw-footage/2020-07-15_gfa-076.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-076.md
@@ -12,7 +12,7 @@ TVTV taped a press conference featuring Ralph Nader on the the difficult economy
 
 *"In one area after another this administration and its predecessor is espousing or promoting or administering policies that promote inflation and promote the inequitable distribution of the fruits of our economy."*
 
-<div class="iframe-container">
+<div class="iframe-container-4-3 mx-auto" style="width: 80%">
   {% include internetArchive.html id=page.archiveID %}
 </div>
 
