add post for one more Four More Years raw tape; more copy updates

--- a/_collections/_raw-footage/2020-07-15_gfa-001.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-001.md
@@ -1,17 +1,17 @@
 ---
 layout: post
 title:  Gerald Ford’s America 001. 8/8 [1974] White House
-description: Raw footage from GERALD FORD'S AMERICA featuring TVTV at the White House on the day of Richard Nixon's resignation
+description: Raw footage from <i>Gerald Ford's America</i> featuring TVTV at the White House on the day of Richard Nixon's resignation
 date:   1974-08-08
 archiveID: gerald-fords-america-001_17246_PM0017482_R01of01
 image: /assets/images/wh-fence.jpg
 ---
 
-This tape consists of approximately 25 minutes of raw footage from the TVTV shooting of GERALD FORD'S AMERICA.
+This tape consists of approximately 25 minutes of raw footage from the TVTV shooting of <i>Gerald Ford's America</i> (1975).
 
-TVTV had initially planned to make a show about Richard Nixon's impeachment, but the president resigned just as the collective was gearing up for production, less than a year after vice president Spiro Agnew's resignation. The show turned into GERALD FORD'S AMERICA as TVTV followed the accidental president's first 100 days in office. This tape is the very first from the shoot, as TVTV members arrive in Washington on the day  Nixon announced his resignation. Elon Soltes and Skip Blumberg tape the scene in front of the White House, from protests to prayer singers to bemused onlookers.
+TVTV had initially planned to make a show about Richard Nixon's impeachment, but the president resigned just as the collective was gearing up for production, less than a year after vice president Spiro Agnew's resignation. The show turned into <i>Gerald Ford's America</i> as TVTV followed the accidental president's first 100 days in office. This tape is the very first from the shoot, as TVTV members arrive in Washington on the day  Nixon announced his resignation. Elon Soltes and Skip Blumberg tape the scene in front of the White House, from protests to prayer singers to bemused onlookers.
 
-*"I think it's better to have an honest dummy in the White House than a crook, don't you?"*
+*__Unidentified onlooker at the White House :__ "I think it's better to have an honest dummy in the White House than a crook, don't you?"*
 
 <div class="iframe-container-4-3 mx-auto" style="width: 80%">
   {% include internetArchive.html id=page.archiveID %}
@@ -22,7 +22,7 @@ TVTV had initially planned to make a show about Richard Nixon's impeachment, but
 <div class="container">
   <div class="row">
     <div class="col">
-      <p>Below is the original TVTV tape log prepared for editing GERALD FORD'S AMERICA.</p>
+      <p>Below is the original TVTV tape log prepared for editing <i>Gerald Ford's America</i>.</p>
     </div>
   </div>
 
