--- a/_collections/_raw-footage/2020-07-15_gfa-076.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-076.md
@@ -1,16 +1,16 @@
 ---
 layout: post
 title:  Gerald Ford's America 076. 9/27 [Ralph] Nader press conference on economic summit
-description: Raw footage from GERALD FORD'S AMERICA featuring a press conference and interview with Ralph Nader
+description: Raw footage from <i>Gerald Ford's America</i> featuring a press conference and interview with Ralph Nader
 date:   1974-09-27
 archiveID: /gerald-fords-america-076_17306_PM0017236_R01of01
 image: /assets/images/nader.jpg
 ---
-This tape consists of approximately 33 minutes of raw footage from the TVTV shooting of GERALD FORD'S AMERICA.
+This tape consists of approximately thirty-three minutes of raw footage from the TVTV shooting of <i>Gerald Ford's America</i> (1975).
 
 TVTV taped a press conference featuring Ralph Nader on the the difficult economy, inflation, and wealth disparities of 1974. Also included is an interview with Nader about Gerald Ford's economic policies and government plans to aid industry at the expense of working people.
 
-*"In one area after another this administration and its predecessor is espousing or promoting or administering policies that promote inflation and promote the inequitable distribution of the fruits of our economy."*
+*__Ralph Nader :__ "In one area after another this administration and its predecessor is espousing or promoting or administering policies that promote inflation and promote the inequitable distribution of the fruits of our economy."*
 
 <div class="iframe-container-4-3 mx-auto" style="width: 80%">
   {% include internetArchive.html id=page.archiveID %}
@@ -21,7 +21,7 @@ TVTV taped a press conference featuring Ralph Nader on the the difficult economy
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      <p>Here is the original TVTV tape log prepared for editing GERALD FORD'S AMERICA:</p>
+      <p>Here is the original TVTV tape log prepared for editing <i>Gerald Ford's America</i>:</p>
     </div>
   </div>
   <div class="row">
