--- a/_collections/_raw-footage/2020-07-15_gfa-245.md
+++ b/_collections/_raw-footage/2020-07-15_gfa-245.md
@@ -1,15 +1,17 @@
 ---
 layout: post
 title:  Gerald Ford's America 245. Trip number 6. Portland--flesh/demos. McCall
-description: Raw footage from GERALD FORD'S AMERICA featuring TVTV on the ground in Portland with Gerald Ford, the media, and protestors
+description: Raw footage from <i>Gerald Ford's America</i> featuring TVTV on the ground in Portland with Gerald Ford, the media, protestors, and Oregon governor Tom McCall
 date:   1974-11-01
 archiveID: gerald-fords-america-245_17457_PM0017310_R01of01
 image: /assets/images/ford-protest.jpg
 ---
 
-This tape consists of approximately 33 minutes of raw footage from the TVTV shooting of GERALD FORD'S AMERICA.
+This tape consists of approximately thirty-three minutes of raw footage from the TVTV shooting of <i>Gerald Ford's America</i> (1975).
 
-TVTV visited Portland, Oregon, as Gerald Ford arrived with a media entourage for a high-dollar fundraiser, where TVTV interviewed befurred and bejewelled gala attendees. The new president was also greeted by a series of protests with chants of "FEED THE POOR! EAT THE RICH!" Included is a conversation at the gala with Oregon governor Tom McCall.
+TVTV visited Portland, Oregon, as the president arrived with a media entourage for a high-dollar fundraiser, where TVTV interviewed befurred and bejewelled gala attendees. The new president, who had only taken office three months earlier, was also greeted by a series of protests with chants of "FEED THE POOR! EAT THE RICH!" Included is a conversation at the gala with Oregon governor Tom McCall.
+
+*__Oregon Governor Tom McCall on Gerald Ford:__ "It's a welcome change to have somebody up there—just in a person-to-person sense—who probably reminds every person who ever played football of his old high school coach. And that's a comforting image. I think that's about the way he lives his life. He's not greatly more complicated than that."*
 
 <div class="iframe-container-4-3 mx-auto" style="width: 80%">
   {% include internetArchive.html id=page.archiveID %}
@@ -20,7 +22,7 @@ TVTV visited Portland, Oregon, as Gerald Ford arrived with a media entourage for
 <div class="container">
   <div class="row">
     <div class="col">
-      <p>Below is the original TVTV tape log prepared for editing GERALD FORD'S AMERICA. For the Presidential Diary account of the day, see <a href="For the Presidential Diary account of the day, see here">here</a>.</p>
+      <p>Below is the original TVTV tape log prepared for editing <i>Gerald Ford's America</i>. For the Presidential Diary account of the day, see <a href="For the Presidential Diary account of the day, see here">here</a>.</p>
     </div>
   </div>
 
